Add skills education contact and more

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <nav id="main-menu">
         <ul class="nav nav-vertical">
             <li><a href="#start"><span>Start</span></a></li>
-            <li><a href="#resume"><span>Resume</span></a></li>
+            <li><a href="#resume"><span>About Me</span></a></li>
             <li><a href="#portfolio"><span>Portfolio</span></a></li>
-            <li><a href="#testimonials"><span>Testimonials</span></a></li>
+            <li><a href="#testimonials"><span>Blog</span></a></li>
             <li><a href="#posts"><span>Latest Posts</span></a></li>
             <li><a href="#contact"><span>Contact</span></a></li>
         </ul>
@@ -79,7 +79,7 @@
 
         <!-- Top -->
         <div class="container container-wide text-md">
-            <i class="icon-before fa fa-comments text-primary"></i>Have you got any questions? Write to me at <a
+            <i class="icon-before fa fa-comments text-primary"></i>Masz jakieś pytania? Napisz do mnie <a
                 href="#" class="text-primary">kontakt@bartoszlis.pl</a>
         </div>
 
@@ -132,17 +132,7 @@
                                     <span></span>
                                 </div>
                             </div>
-                            <strong>HTML5</strong>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90"
-                                     aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
-                            <strong>CSS3</strong>
+                            <strong>HTML / CSS</strong>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
@@ -157,12 +147,40 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80"
+                                     aria-valuemin="0" aria-valuemax="100">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <strong>Gulp / Webpack / SASS / RWD </strong>
+                        </div>
+                        <div class="skill">
+                            <div class="progress progress-animated">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80"
+                                     aria-valuemin="0" aria-valuemax="100">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <strong>Ajax / REST / JSON Server / ECMAScript 6 </strong>
+                        </div>
+                        <!-- Skill -->
+                        <div class="skill">
+                            <div class="progress progress-animated">
                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60"
                                      aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
-                            <strong>AngularJS</strong>
+                            <strong>React / Fetch</strong>
+                        </div>
+                        <div class="skill">
+                            <div class="progress progress-animated">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90"
+                                     aria-valuemin="0" aria-valuemax="100">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <strong>Scrum / Agile / Git / GitFlow</strong>
                         </div>
                     </div>
 
@@ -208,21 +226,26 @@
                         <div class="timeline">
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">Jan 2004 - Dec 2006</span>
-                                <span class="event-name">Specialization course</span>
-                                <span class="event-description">University of studies, Poland, Cracow</span>
+                                <span class="event-date">Maj 2019 - Lip 2019</span>
+                                <span class="event-name">Junior Front-end Developer, JavaScript Developer: React</span>
+                                <span class="event-description">Coders Lab</span>
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">Jan 2004 - Dec 2006</span>
-                                <span class="event-name">Specialization course</span>
-                                <span class="event-description">University of studies, Poland, Cracow</span>
+                                <span class="event-date">Sie 2017 - Paź 2017</span>
+                                <span class="event-name">Junior Front-end Developer</span>
+                                <span class="event-description">infoShare Academy</span>
                             </div>
                             <!-- Single event -->
                             <div class="timeline-event te-primary">
-                                <span class="event-date">Jan 2004 - Dec 2006</span>
-                                <span class="event-name">Specialization course</span>
-                                <span class="event-description">University of studies, Poland, Cracow</span>
+                                <span class="event-date">Paź 2008 - Cze 2014</span>
+                                <span class="event-name">Informatyka Inżynier specjalizacja: Systemy i Sieci Komputerowe</span>
+                                <span class="event-description">Wyższa Szkoła Ekonomii i Innowacji w Lublinie</span>
+                            </div>
+                            <div class="timeline-event te-primary">
+                                <span class="event-date">Wrz 2007 - Cze 2008</span>
+                                <span class="event-name">Technik Informatyk: Administrowanie sieciowymi systemami operacyjnymi</span>
+                                <span class="event-description">Studium Policealne nr 5 w Zespole Szkół Ekonomicznych im. A. i J Vetterów w Lublinie</span>
                             </div>
                         </div>
                     </div>
@@ -256,15 +279,7 @@
                             <strong>English</strong>
                         </div>
                         <!-- Skill -->
-                        <div class="skill">
-                            <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="40"
-                                     aria-valuemin="0" aria-valuemax="100">
-                                    <span></span>
-                                </div>
-                            </div>
-                            <strong>German</strong>
-                        </div>
+
                     </div>
 
                     <!-- Resume Box / Hobbies -->
@@ -338,7 +353,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -360,7 +375,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -382,7 +397,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -404,7 +419,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -426,7 +441,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -448,7 +463,7 @@
                                     <a href="projects/project-example-it.html" data-target="ajax-modal"
                                        class="icon icon-sm icon-hover icon-circle icon-primary"><i
                                             class="fa fa-link"></i></a>
-                                    <a href="http://www.suelo.pl" target="_blank"
+                                    <a href="#" target="_blank"
                                        class="icon icon-sm icon-circle icon-white icon-hover"><i class="fa fa-play"></i></a>
                                 </div>
                             </div>
@@ -657,7 +672,7 @@
 
         <!-- Contact Box -->
         <div class="contact-box bg-secondary dark animated" data-animation="flipInY">
-            <h1>Don’t hesitate to <strong>contact me</strong>!</h1>
+            <h1>Nie trać czasu <strong>napisz do mnie</strong>!</h1>
             <!-- Contact List -->
             <ul class="list-unstyled list-unstyled-icons">
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>21-050 Piaski<br/>Giełczew
@@ -667,7 +682,7 @@
                 </li>
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+48 721348374</li>
             </ul>
-            <a href="#" class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i
+            <a href="#" class="btn btn-primary" data-target="messenger"><span>Contakt</span><i
                     class="ti-email"></i></a>
             <h5 class="margin-t-60">Check my social media!</h5>
             <ul class="list-inline">
@@ -698,7 +713,7 @@
                data-target="messenger"><i class="fa fa-times"></i></a>
             <!-- Avatar -->
             <img src="assets/img/photos/it-avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
-            <h3>Please fill the <strong>form</strong> - I will response as fast as I can!</h3>
+            <h3>Napisz do mnie <strong>wiadomość</strong> - odpowiem najszybciej jak się da!</h3>
             <!-- Contact Form -->
             <form id="contact-form">
                 <div class="form-alert"></div>
@@ -723,6 +738,26 @@
         </div>
     </div>
 </div>
+<!-- Function php send email-->
+<?php
+
+	$name = trim($_POST['name']);
+	$email = trim($_POST['email']);
+	$message = trim($_POST['message']);
+
+	$emailTo = 'bartoszlis87@gmail.com'; //Put your own email address here
+	if (empty($subject)) {
+	    $subject = 'Wiadomość ze strony www.bartoszlis.pl';
+	}
+	$body = "Name: $name \n\nEmail: $email \n\nMessage:\n$message";
+	$headers = 'From: '.$email."\r\n" .
+        'Reply-To: '.$email."\r\n";
+
+	mail($emailTo, $subject, $body, $headers);
+	$emailSent = true;
+	echo ('SEND');
+
+?>
 
 <!-- Mobile Navigation -->
 <a href="#" id="mobile-nav-toggle" class="icon icon-circle icon-sm icon-primary icon-hover visible-xs visible-sm"
@@ -736,14 +771,11 @@
         <!-- Nav -->
         <ul class="nav nav-vertical">
             <li><a href="#start"><span>Start</span></a></li>
-            <li><a href="#resume"><span>Resume</span></a></li>
+            <li><a href="#resume"><span>About Me</span></a></li>
             <li><a href="#portfolio"><span>Portfolio</span></a></li>
-            <li><a href="#testimonials"><span>Testimonials</span></a></li>
+            <li><a href="#testimonials"><span>Blog</span></a></li>
             <li><a href="#posts"><span>Latest Posts</span></a></li>
             <li><a href="#contact"><span>Contact</span></a></li>
-            <li><a href="page-vertical.html" target="_blank"><span>Promo Page</span><span
-                    class="label label-primary margin-l-10">NEW!</span></a></li>
-            <li><a href="documentation.html" target="_blank"><span>Documentation</span></a></li>
         </ul>
         <!-- Social Media -->
         <div class="margin-t-20">
